# SpintronicsMOKE

./: .gitignore  .gitmodules  ArtieLabUI.py  CImageProcessing.pyd  LEDDriverUI.py  LEDDriver_UI.py  LampController.py  MagnetDriverUI.py  README.md  SweeperUIs.py  TwoThreadCameraLamp.py  button.ui  getFrameTest.py  justViewCamera.py
CFrameProcessors/: CFrameProcessors.cpp  CMakeLists.txt
CFrameProcessors/lib/: CFrameProcessors.c  CFrameProcessors.cpp  CFrameProcessors.h  CFrameProcessors.hpp  CMakeLists.txt
CFrameProcessors/playing/: CMakeLists.txt  generate_hist.c  generate_hist.h
Coil Calibrations/: Big perpendicular magnet - cone-shaped bolt_fit.txt  Big perpendicular magnet - shallow bolt.txt  Cryostat magnet - out of plane coil_fit.txt  Cryostat magnet - out of plane coil_seems_wrong_fit.txt  Perpendicular magnet - cone pole.txt  Perpendicular magnet - cone pole_fit.txt  Perpendicular magnet - flat pole_fit.txt  Rotatable magnet - high field pole shoes - big coil.txt  Rotatable magnet - high field pole shoes - big coil_fit.txt  Rotatable magnet - no pole shoes - big coil.txt  Rotatable magnet - no pole shoes - big coil_fit.txt  Rotatable magnet - no pole shoes - small coil_fit.txt  Rotatable magnet - split pole shoes - big coil_fit.txt  Rotatable magnet - split pole shoes - small coil.txt  Rotatable magnet - split pole shoes - small coil_fit.txt
TestScripts/: CImageProcessing.pyd  analyserloading.py  calibrate_analyser.py  difference_between_frames.py  example_loading_h5.py  justViewCamera.py  load_cal_and_save_ascii  openCVCameraTest.py  save_single_image.py  singleLightViewCamera.py  test_loading_h5.py  useClibrary.py
WrapperClasses/: AnalyserController.py  CameraGrabber.py  CustomLoggingFormatter.py  FrameProcessor.py  LampController.py  MagnetController.py  QTextEditLogger.py  SpinBox.py  __init__.py
devscripts/: differencebetweenanalysersweep.py  example_loading_h5.py  exploring_spinbox.py  load_cal_and_save_ascii.py  singleLightViewCamera.py  testing_spin_ui.ui  testingsavingtif.py  useClibrary.py
res/: AnalyserSweep.ui  ArtieLab.ui  FieldSweep.ui  LED_driver_UI.ui  Magnet_driver_UI.ui  last_calibration_location.txt
(+15 files in other folders)
